@@ -612,8 +612,10 @@ sub find_media_link {
         
         
     } else {
-        %find = (simple_search => ($query->param('search_filter') || ""));
-        %persist = (search_filter => ($query->param('search_filter') || ""));
+        my $search_filter = defined($query->param('search_filter')) ? $query->param('search_filter') : $session{'KRANG_PERSIST_Media_search_filter'};
+        %find = (simple_search => $search_filter);
+        %persist = (search_filter => $search_filter);
+        $template->param(search_filter => $search_filter);
     }
                  
 
